--- a/templates/payment_iframe.html
+++ b/templates/payment_iframe.html
@@ -28,7 +28,7 @@
                 iframe.onload = function() {
                     const chingupPaymentData = {
                         amount: amount,
-                        merchant_id: 'YOUR_MERCHANT_ID', // Your Chingup merchant_id
+                        merchant_id: {{merchant_id}}, // Your Chingup merchant_id
                         type: "paymentData",
                         transaction_id: transactionId // From GHL
                     };
